# Version History

## unreleased

* MCCS-252 - New and modified Tile commands for beam configuration and calibration
* MCCS-309 - Integration of devices into end-to-end power flow
* MCCS-347 - Correct initialisation values for controller commandResult
* MCCS-307 - Add PSI chart configuration

## 0.6.0

* MCCS-366 - Updates to APIU and Antenna
* MCCS-253 - Add simulation of ARP resolution to TPM simulator
* MCCS-371 - Replace plantuml markup with static svgs
* MCCS-302 - Updates for PI#9 json strings according to:
             https://confluence.skatelescope.org/pages/viewpage.action?pageId=110799390
* MCCS-370 - Async mechanism for subarray ObsReset command
* MCCS-180 - updated power management, new subrack device, MccsController.Startup()
* MCCS-317 - Basic Abort and ObsReset implementation
* MCCS-361 - robust device connection
* MCCS-320 - deployment bugfixes and move to hyphenated make targets
* MCCS-350 - Set commandResult to UNKNOWN before MccsController commands are executed
* MCCS-345 - Basic connect to "turn on" TPM1.2 in Simulator
* MCCS-272 - SubArrayBeam device - implement stub device
* MCCS-251 - Software control of physical Tile Processing Board

## 0.5.0

* MCCS-169 - Add configure to subarray
* MCCS-313 - MCCS Tile WebJive pages
* MCCS-325 - minikube and WebJive setup
* MCCS-162 - SubArray device: add resource management
* MCCS-322 - Improve xray_report job stability
* MCCS-306 - Document flow and control of power
* MCCS-331 - update dependencies for new ska-docker images
* MCCS-242 - Test harness refactor
* MCCS-331 - Don't assume pytango is numpy-enabled

## 0.4.0

* MCCS-208 - re-enable webjive chart
* MCCS-237 - device subpackages
* MCCS-240 - allow deviceserver overrides
* MCCS-225 - further work on hardware model, especially antenna
* MCCS-162 - Subarray resource management model

## 0.3.0

* MCCS-156 - controller resource management model
* MCCS-225 - hardware model
* MCCS-207 - refactor helm charts to use tango-util

## 0.2.1 
